# job-portal

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: main.py  utils.py
app/api/: error.py  routes.py
app/api/middleware/: __init__.py  auth.py
app/api/v1/: __init__.py  auth.py  job_post.py  smtp_service.py
app/conf/: __init__.py  config.py  job_crud.py  logs.py  smtp.py
app/db/: __init__.py  db.py
app/model/: __init__.py  job_service.py  logs.py  user.py
app/schemas/: job.py  user.py
